--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^18.2.0",
     "@po-ui/ng-components": "^18.21.0",
     "@po-ui/ng-templates": "^18.21.0",
+    "@totvs/protheus-lib-core": "^17.3.3",
     "rxjs": "~7.8.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
