--- a/src/assets/data/appConfig.json
+++ b/src/assets/data/appConfig.json
@@ -1,6 +1,5 @@
 {
-    "name": "Prj_GrupoDeProdutos",
+    "name": "Regras",
     "version": "1.0.0",
-    "productLine": "Protheus",
-    "api_baseUrl": "http://127.0.0.1:8400/rest"
+    "productLine": "Protheus"
 }
