--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@genkit-ai/googleai": "^1.11.1",
     "@po-ui/ng-components": "^18.21.0",
     "@po-ui/ng-templates": "^18.21.0",
     "@totvs/protheus-lib-core": "^17.3.3",
+    "genkit": "^1.11.1",
     "rxjs": "~7.8.0",
     "subsink": "^1.0.2",
     "tslib": "^2.3.0",
