--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@po-ui/ng-components": "^18.21.0",
     "@po-ui/ng-templates": "^18.21.0",
     "@totvs/protheus-lib-core": "^17.3.3",
+    "date-fns": "^4.1.0",
     "genkit": "^1.11.1",
     "ng-http-caching": "^20.0.1",
     "rxjs": "~7.8.0",
